--- a/diensten.html
+++ b/diensten.html
@@ -182,42 +182,42 @@
         <section class="services">
             <div class="services__grid">
                 <div class="service-card">
-                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><circle cx="9" cy="10" r="0.5" fill="currentColor"/><circle cx="15" cy="10" r="0.5" fill="currentColor"/></svg></div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><line x1="9" x2="9.01" y1="9" y2="9"/><line x1="15" x2="15.01" y1="9" y2="9"/></svg></div>
                     <h3 class="service-card__title">Gelaatsbehandeling</h3>
                     <p class="service-card__description">Aangepast aan ieders huidtype</p>
                     <div class="service-card__price">Basis: €54<br>Intensief: €70-90</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18.5 2A3.5 3.5 0 0 0 15 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 18.5 2z" opacity="0.4"/><path d="M12 12v6.5a3.5 3.5 0 0 1-7 0V12"/><path d="M5.5 2A3.5 3.5 0 0 0 2 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 5.5 2z"/></svg></div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 14h2a2 2 0 0 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 16"/><path d="m14.45 13.39 5.05-4.694C20.196 8 21 6.85 21 5.75a2.75 2.75 0 0 0-4.797-1.837.276.276 0 0 1-.406 0A2.75 2.75 0 0 0 11 5.75c0 1.2.802 2.248 1.5 2.946L16 11.95"/><path d="m2 15 6 6"/><path d="m7 20 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a1 1 0 0 0-2.75-2.91"/></svg></div>
                     <h3 class="service-card__title">Manicure</h3>
                     <p class="service-card__description">Nagels vijlen, nagelriemen zuiver maken, handcrème</p>
                     <div class="service-card__price">€20</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M9 18l-3 3M15 18l3 3"/><path d="M12 2C8 2 5 5 5 9c0 3 2 6 7 9 5-3 7-6 7-9 0-4-3-7-7-7z"/><path d="M12 8v4M10 10h4" opacity="0.4"/></svg></div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 16v-2.38C4 11.5 2.97 10.5 3 8c.03-2.72 1.49-6 4.5-6C9.37 2 10 3.8 10 5.5c0 3.11-2 5.66-2 8.68V16a2 2 0 1 1-4 0Z"/><path d="M20 20v-2.38c0-2.12 1.03-3.12 1-5.62-.03-2.72-1.49-6-4.5-6C14.63 6 14 7.8 14 9.5c0 3.11 2 5.66 2 8.68V20a2 2 0 1 0 4 0Z"/><path d="M16 17h4"/><path d="M4 13h4"/></svg></div>
                     <h3 class="service-card__title">Pedicure</h3>
                     <p class="service-card__description">Onderhoudspedicure binnen de 6 weken</p>
                     <div class="service-card__price">€25</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z" opacity="0.4"/><path d="M12 6v2M12 16v2M6 12h2M16 12h2"/></svg></div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="1"/><path d="m9 20 3-6 3 6"/><path d="m6 8 6 2 6-2"/><path d="M12 10v4"/></svg></div>
                     <h3 class="service-card__title">Massage</h3>
                     <p class="service-card__description">Volledige lichaamsmassage</p>
                     <div class="service-card__price">€60</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M20 7l-2-3H6L4 7"/><path d="M4 7c0 5 3 9 8 12 5-3 8-7 8-12"/><path d="M12 11c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2z" opacity="0.4"/></svg></div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"/><path d="m14 7 3 3"/><path d="M5 6v4"/><path d="M19 14v4"/><path d="M10 2v2"/><path d="M7 8H3"/><path d="M21 16h-4"/><path d="M11 3H9"/></svg></div>
                     <h3 class="service-card__title">Epilatie</h3>
                     <p class="service-card__description">Wenkbrauwen, bovenlip, benen, bikini, oksels</p>
                     <div class="service-card__price">Vanaf €7</div>
                 </div>
 
                 <div class="service-card">
-                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2L9 9H2l5.5 4.5L5 21l7-5 7 5-2.5-7.5L22 9h-7L12 2z"/></svg></div>
+                    <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m11 10 3 3"/><path d="M6.5 21A3.5 3.5 0 1 0 3 17.5a2.62 2.62 0 0 1-.708 1.792A1 1 0 0 0 3 21z"/><path d="M9.969 17.031 21.378 5.624a1 1 0 0 0-3.002-3.002L6.967 14.031"/></svg></div>
                     <h3 class="service-card__title">Make-up</h3>
                     <p class="service-card__description">Dag en avond make-up</p>
                     <div class="service-card__price">€20-25</div>
@@ -229,7 +229,7 @@
             <h2 class="detailed-services__title">Gedetailleerde Prijslijst</h2>
             
             <div class="service-category">
-                <h3 class="service-category__title">Gelaatsbehandeling</h3>
+                <h3 class="service-category__title"><span class="service-category__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><line x1="9" x2="9.01" y1="9" y2="9"/><line x1="15" x2="15.01" y1="9" y2="9"/></svg></span> Gelaatsbehandeling</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Basis gelaatsbehandeling Clinicare</span>
@@ -267,7 +267,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Manicure</h3>
+                <h3 class="service-category__title"><span class="service-category__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 14h2a2 2 0 0 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 16"/><path d="m14.45 13.39 5.05-4.694C20.196 8 21 6.85 21 5.75a2.75 2.75 0 0 0-4.797-1.837.276.276 0 0 1-.406 0A2.75 2.75 0 0 0 11 5.75c0 1.2.802 2.248 1.5 2.946L16 11.95"/><path d="m2 15 6 6"/><path d="m7 20 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a1 1 0 0 0-2.75-2.91"/></svg></span> Manicure</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Nagels vijlen, nagelriemen zuiver maken, handcrème</span>
@@ -293,7 +293,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Pedicure</h3>
+                <h3 class="service-category__title"><span class="service-category__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 16v-2.38C4 11.5 2.97 10.5 3 8c.03-2.72 1.49-6 4.5-6C9.37 2 10 3.8 10 5.5c0 3.11-2 5.66-2 8.68V16a2 2 0 1 1-4 0Z"/><path d="M20 20v-2.38c0-2.12 1.03-3.12 1-5.62-.03-2.72-1.49-6-4.5-6C14.63 6 14 7.8 14 9.5c0 3.11 2 5.66 2 8.68V20a2 2 0 1 0 4 0Z"/><path d="M16 17h4"/><path d="M4 13h4"/></svg></span> Pedicure</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Onderhoudspedicure binnen de 6 weken</span>
@@ -319,7 +319,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Epilatie</h3>
+                <h3 class="service-category__title"><span class="service-category__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"/><path d="m14 7 3 3"/><path d="M5 6v4"/><path d="M19 14v4"/><path d="M10 2v2"/><path d="M7 8H3"/><path d="M21 16h-4"/><path d="M11 3H9"/></svg></span> Epilatie</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Wenkbrauwen onderhoud</span>
@@ -357,7 +357,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Massage</h3>
+                <h3 class="service-category__title"><span class="service-category__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="1"/><path d="m9 20 3-6 3 6"/><path d="m6 8 6 2 6-2"/><path d="M12 10v4"/></svg></span> Massage</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Volledige lichaamsmassage</span>
@@ -371,7 +371,7 @@
             </div>
 
             <div class="service-category">
-                <h3 class="service-category__title">Make-up</h3>
+                <h3 class="service-category__title"><span class="service-category__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m11 10 3 3"/><path d="M6.5 21A3.5 3.5 0 1 0 3 17.5a2.62 2.62 0 0 1-.708 1.792A1 1 0 0 0 3 21z"/><path d="M9.969 17.031 21.378 5.624a1 1 0 0 0-3.002-3.002L6.967 14.031"/></svg></span> Make-up</h3>
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Dag make-up</span>
