--- a/index.html
+++ b/index.html
@@ -205,17 +205,17 @@
         <section class="features">
             <div class="features__grid">
                 <div class="feature">
-                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 3l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L12 9.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z"/><path d="M5 16l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L5 22.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z" opacity="0.4"/><path d="M19 16l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L19 22.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z" opacity="0.4"/></svg></div>
+                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"/><path d="M20 2v4"/><path d="M22 4h-4"/><circle cx="4" cy="20" r="2"/></svg></div>
                     <h3 class="feature__title">Schoonheidsbehandelingen</h3>
                     <p class="feature__text">Professionele gezichts- en lichaamsbehandelingen</p>
                 </div>
                 <div class="feature">
-                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M18.5 2A3.5 3.5 0 0 0 15 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 18.5 2z" opacity="0.4"/><path d="M12 12v6.5a3.5 3.5 0 0 1-7 0V12"/><path d="M5.5 2A3.5 3.5 0 0 0 2 5.5V12a3 3 0 0 0 6 0V5.5A3.5 3.5 0 0 0 5.5 2z"/></svg></div>
+                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 14h2a2 2 0 0 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 16"/><path d="m14.45 13.39 5.05-4.694C20.196 8 21 6.85 21 5.75a2.75 2.75 0 0 0-4.797-1.837.276.276 0 0 1-.406 0A2.75 2.75 0 0 0 11 5.75c0 1.2.802 2.248 1.5 2.946L16 11.95"/><path d="m2 15 6 6"/><path d="m7 20 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a1 1 0 0 0-2.75-2.91"/></svg></div>
                     <h3 class="feature__title">Nagelverzorging</h3>
                     <p class="feature__text">Manicure, pedicure en nagelstyling</p>
                 </div>
                 <div class="feature">
-                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z" opacity="0.4"/><path d="M12 6v2M12 16v2M6 12h2M16 12h2"/></svg></div>
+                    <div class="feature__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"/><path d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"/></svg></div>
                     <h3 class="feature__title">Ontspanning</h3>
                     <p class="feature__text">Massages en wellness behandelingen</p>
                 </div>
