--- a/over.html
+++ b/over.html
@@ -86,7 +86,7 @@
             <div class="team">
                 <div class="team__grid">
                     <div class="team-member">
-                        <div class="team-member__avatar" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="8" r="4"/><path d="M20 21c0-4.42-3.58-8-8-8s-8 3.58-8 8" opacity="0.4"/><circle cx="12" cy="12" r="11"/></svg></div>
+                        <div class="team-member__avatar" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"/><circle cx="12" cy="7" r="4"/></svg></div>
                         <h3 class="team-member__name">Debbie</h3>
                         <p class="team-member__role">Eigenaresse & Schoonheidsspecialiste</p>
                         <p class="team-member__bio">Met meer dan 20 jaar ervaring in de schoonheidsbranche</p>
@@ -98,17 +98,17 @@
                 <h2 class="values__title">Mijn Waarden</h2>
                 <div class="values__grid">
                     <div class="value">
-                        <div class="value__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"/><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z" opacity="0.4"/><path d="M12 6v2M12 16v2M6 12h2M16 12h2"/></svg></div>
+                        <div class="value__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"/><path d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"/></svg></div>
                         <h3 class="value__title">Relaxatie</h3>
                         <p class="value__text">Een moment van rust en ontspanning voor jou</p>
                     </div>
                     <div class="value">
-                        <div class="value__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 3l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L12 9.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z"/><path d="M5 16l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L5 22.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z" opacity="0.4"/><path d="M19 16l1.09 3.36h3.54l-2.86 2.08 1.09 3.36L19 22.72l-2.86 2.08 1.09-3.36-2.86-2.08h3.54z" opacity="0.4"/></svg></div>
+                        <div class="value__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M14 9.536V7a4 4 0 0 1 4-4h1.5a.5.5 0 0 1 .5.5V5a4 4 0 0 1-4 4 4 4 0 0 0-4 4c0 2 1 3 1 5a5 5 0 0 1-1 3"/><path d="M4 9a5 5 0 0 1 8 4 5 5 0 0 1-8-4"/><path d="M5 21h14"/></svg></div>
                         <h3 class="value__title">Vitaliteit</h3>
                         <p class="value__text">Je natuurlijke schoonheid naar boven brengen</p>
                     </div>
                     <div class="value">
-                        <div class="value__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78L12 21.23l8.84-8.84a5.5 5.5 0 0 0 0-7.78z"/></svg></div>
+                        <div class="value__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"/></svg></div>
                         <h3 class="value__title">Warmte</h3>
                         <p class="value__text">Persoonlijke aandacht in een warme sfeer</p>
                     </div>
