Navbar styling + afspraak CTA

--- a/index.html
+++ b/index.html
@@ -221,6 +221,12 @@
                 </div>
             </div>
         </section>
+
+        <section class="services-cta">
+            <h2 class="services-cta__title">Klaar voor een afspraak?</h2>
+            <p class="services-cta__text">Neem contact op en ontdek wat ik voor jou kan betekenen</p>
+            <a href="/contact" class="btn btn--primary">Maak een afspraak</a>
+        </section>
     </main>
     <footer style="opacity:0; pointer-events:none;">
         <p>&copy; 2026 Débeauty</p>
