Mobile fixes (horizontal scroll, theme-color), added dual   CTA section on homepage (contact + over mij), removed   maskers and prices from service cards on diensten page,   removed € symbols from visible prices.

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="nl_BE">
     <meta property="og:site_name" content="Débeauty">
 
-    <meta name="theme-color" content="#A6D9C6">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
