--- a/diensten.html
+++ b/diensten.html
@@ -19,7 +19,7 @@
     <meta property="og:locale" content="nl_BE">
     <meta property="og:site_name" content="Débeauty">
 
-    <meta name="theme-color" content="#A6D9C6">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -47,7 +47,7 @@
                 "item": {
                     "@type": "Service",
                     "name": "Gelaatsbehandeling",
-                    "description": "Basis en intensieve gelaatsbehandeling Clinicare, diverse maskers",
+                    "description": "Basis en intensieve gelaatsbehandeling Clinicare",
                     "offers": {
                         "@type": "AggregateOffer",
                         "lowPrice": "54",
@@ -185,42 +185,36 @@
                     <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M8 14s1.5 2 4 2 4-2 4-2"/><line x1="9" x2="9.01" y1="9" y2="9"/><line x1="15" x2="15.01" y1="9" y2="9"/></svg></div>
                     <h3 class="service-card__title">Gelaatsbehandeling</h3>
                     <p class="service-card__description">Aangepast aan ieders huidtype</p>
-                    <div class="service-card__price">Basis: €54<br>Intensief: €70-90</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M11 14h2a2 2 0 0 0 0-4h-3c-.6 0-1.1.2-1.4.6L3 16"/><path d="m14.45 13.39 5.05-4.694C20.196 8 21 6.85 21 5.75a2.75 2.75 0 0 0-4.797-1.837.276.276 0 0 1-.406 0A2.75 2.75 0 0 0 11 5.75c0 1.2.802 2.248 1.5 2.946L16 11.95"/><path d="m2 15 6 6"/><path d="m7 20 1.6-1.4c.3-.4.8-.6 1.4-.6h4c1.1 0 2.1-.4 2.8-1.2l4.6-4.4a1 1 0 0 0-2.75-2.91"/></svg></div>
                     <h3 class="service-card__title">Manicure</h3>
                     <p class="service-card__description">Nagels vijlen, nagelriemen zuiver maken, handcrème</p>
-                    <div class="service-card__price">€20</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M4 16v-2.38C4 11.5 2.97 10.5 3 8c.03-2.72 1.49-6 4.5-6C9.37 2 10 3.8 10 5.5c0 3.11-2 5.66-2 8.68V16a2 2 0 1 1-4 0Z"/><path d="M20 20v-2.38c0-2.12 1.03-3.12 1-5.62-.03-2.72-1.49-6-4.5-6C14.63 6 14 7.8 14 9.5c0 3.11 2 5.66 2 8.68V20a2 2 0 1 0 4 0Z"/><path d="M16 17h4"/><path d="M4 13h4"/></svg></div>
                     <h3 class="service-card__title">Pedicure</h3>
                     <p class="service-card__description">Onderhoudspedicure binnen de 6 weken</p>
-                    <div class="service-card__price">€25</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="5" r="1"/><path d="m9 20 3-6 3 6"/><path d="m6 8 6 2 6-2"/><path d="M12 10v4"/></svg></div>
                     <h3 class="service-card__title">Massage</h3>
                     <p class="service-card__description">Volledige lichaamsmassage</p>
-                    <div class="service-card__price">€60</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m21.64 3.64-1.28-1.28a1.21 1.21 0 0 0-1.72 0L2.36 18.64a1.21 1.21 0 0 0 0 1.72l1.28 1.28a1.2 1.2 0 0 0 1.72 0L21.64 5.36a1.2 1.2 0 0 0 0-1.72"/><path d="m14 7 3 3"/><path d="M5 6v4"/><path d="M19 14v4"/><path d="M10 2v2"/><path d="M7 8H3"/><path d="M21 16h-4"/><path d="M11 3H9"/></svg></div>
                     <h3 class="service-card__title">Epilatie</h3>
                     <p class="service-card__description">Wenkbrauwen, bovenlip, benen, bikini, oksels</p>
-                    <div class="service-card__price">Vanaf €7</div>
                 </div>
 
                 <div class="service-card">
                     <div class="service-card__icon" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="m11 10 3 3"/><path d="M6.5 21A3.5 3.5 0 1 0 3 17.5a2.62 2.62 0 0 1-.708 1.792A1 1 0 0 0 3 21z"/><path d="M9.969 17.031 21.378 5.624a1 1 0 0 0-3.002-3.002L6.967 14.031"/></svg></div>
                     <h3 class="service-card__title">Make-up</h3>
                     <p class="service-card__description">Dag en avond make-up</p>
-                    <div class="service-card__price">€20-25</div>
                 </div>
             </div>
         </section>
@@ -233,35 +227,11 @@
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Basis gelaatsbehandeling Clinicare</span>
-                        <span class="service-item__price">€54</span>
+                        <span class="service-item__price">54</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Intensieve gelaatsbehandeling Clinicare</span>
-                        <span class="service-item__price">€70-90</span>
-                    </div>
-                    <div class="service-item">
-                        <span class="service-item__name">Masker refresh</span>
-                        <span class="service-item__price">€75</span>
-                    </div>
-                    <div class="service-item">
-                        <span class="service-item__name">Masker pure</span>
-                        <span class="service-item__price">€72</span>
-                    </div>
-                    <div class="service-item">
-                        <span class="service-item__name">Masker glow</span>
-                        <span class="service-item__price">€75</span>
-                    </div>
-                    <div class="service-item">
-                        <span class="service-item__name">Masker Ime reverse</span>
-                        <span class="service-item__price">€80</span>
-                    </div>
-                    <div class="service-item">
-                        <span class="service-item__name">Masker X3M pure pore</span>
-                        <span class="service-item__price">€75</span>
-                    </div>
-                    <div class="service-item">
-                        <span class="service-item__name">Masker carboxytherapy</span>
-                        <span class="service-item__price">€90</span>
+                        <span class="service-item__price">70-90</span>
                     </div>
                 </div>
             </div>
@@ -271,23 +241,23 @@
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Nagels vijlen, nagelriemen zuiver maken, handcrème</span>
-                        <span class="service-item__price">€20</span>
+                        <span class="service-item__price">20</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Knippen en vijlen van de nagels</span>
-                        <span class="service-item__price">€7</span>
+                        <span class="service-item__price">7</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Lakken</span>
-                        <span class="service-item__price">€6</span>
+                        <span class="service-item__price">6</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Gelish plaatsen</span>
-                        <span class="service-item__price">€15</span>
+                        <span class="service-item__price">15</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Verwijderen Gelish</span>
-                        <span class="service-item__price">€10</span>
+                        <span class="service-item__price">10</span>
                     </div>
                 </div>
             </div>
@@ -297,23 +267,23 @@
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Onderhoudspedicure binnen de 6 weken</span>
-                        <span class="service-item__price">€25</span>
+                        <span class="service-item__price">25</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Intensieve pedicure</span>
-                        <span class="service-item__price">€30</span>
+                        <span class="service-item__price">30</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Lakken</span>
-                        <span class="service-item__price">€6</span>
+                        <span class="service-item__price">6</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Gelish plaatsen</span>
-                        <span class="service-item__price">€15</span>
+                        <span class="service-item__price">15</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Verwijderen Gelish</span>
-                        <span class="service-item__price">€10</span>
+                        <span class="service-item__price">10</span>
                     </div>
                 </div>
             </div>
@@ -323,35 +293,35 @@
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Wenkbrauwen onderhoud</span>
-                        <span class="service-item__price">€7</span>
+                        <span class="service-item__price">7</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Wenkbrauwen vorm geven</span>
-                        <span class="service-item__price">€10</span>
+                        <span class="service-item__price">10</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Bovenlip</span>
-                        <span class="service-item__price">€7</span>
+                        <span class="service-item__price">7</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Gelaat</span>
-                        <span class="service-item__price">€15</span>
+                        <span class="service-item__price">15</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Onderbenen</span>
-                        <span class="service-item__price">€20</span>
+                        <span class="service-item__price">20</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Benen volledig</span>
-                        <span class="service-item__price">€32</span>
+                        <span class="service-item__price">32</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Bikini</span>
-                        <span class="service-item__price">€12-18</span>
+                        <span class="service-item__price">12-18</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Oksels</span>
-                        <span class="service-item__price">€12</span>
+                        <span class="service-item__price">12</span>
                     </div>
                 </div>
             </div>
@@ -361,11 +331,11 @@
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Volledige lichaamsmassage</span>
-                        <span class="service-item__price">€60</span>
+                        <span class="service-item__price">60</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Rug- en nekmassage</span>
-                        <span class="service-item__price">€25</span>
+                        <span class="service-item__price">25</span>
                     </div>
                 </div>
             </div>
@@ -375,11 +345,11 @@
                 <div class="service-category__items">
                     <div class="service-item">
                         <span class="service-item__name">Dag make-up</span>
-                        <span class="service-item__price">€20</span>
+                        <span class="service-item__price">20</span>
                     </div>
                     <div class="service-item">
                         <span class="service-item__name">Avond make-up</span>
-                        <span class="service-item__price">€25</span>
+                        <span class="service-item__price">25</span>
                     </div>
                 </div>
             </div>
