--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:description" content="Professionele gezichtsbehandelingen, manicure, pedicure, massage en meer. Boek nu een afspraak.">
     <meta name="twitter:image" content="https://www.debeauty.be/assets/sharing-image.png">
 
-    <meta name="theme-color" content="#A6D9C6">
+    <meta name="theme-color" content="#ffffff">
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -222,10 +222,17 @@
             </div>
         </section>
 
-        <section class="services-cta">
-            <h2 class="services-cta__title">Klaar voor een afspraak?</h2>
-            <p class="services-cta__text">Neem contact op en ontdek wat ik voor jou kan betekenen</p>
-            <a href="/contact" class="btn btn--primary">Maak een afspraak</a>
+        <section class="cta-duo">
+            <div class="cta-duo__card">
+                <h2 class="cta-duo__title">Maak een afspraak</h2>
+                <p class="cta-duo__text">Klaar voor een moment van ontspanning? Neem gerust contact op.</p>
+                <a href="/contact" class="btn btn--primary">Contact</a>
+            </div>
+            <div class="cta-duo__card cta-duo__card--minimal">
+                <h2 class="cta-duo__title">Maak kennis</h2>
+                <p class="cta-duo__text">Meer dan 20 jaar ervaring in schoonheidsverzorging. Ontdek mijn verhaal.</p>
+                <a href="/over" class="cta-duo__link">Over mij</a>
+            </div>
         </section>
     </main>
     <footer style="opacity:0; pointer-events:none;">
