Splashscreen animation fix

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <div id="overlay" class="overlay">
         <img id="overlay__logo" class="overlay__logo" src="/assets/logo.png" alt="débeauty">
     </div>
+    <script>if(sessionStorage.getItem('logoAnimationPlayed')){document.getElementById('overlay').style.display='none';}</script>
     <header class="header">
         <nav class="navbar">
             <div class="navbar__hamburger">
